@@ -121,6 +121,8 @@
 <!-- *** local *** -->
 <!ENTITY ansi "<link linkend='ansi'><varname>CUSTOM:*ANSI*</varname></link>">
 <!ENTITY ansi-opt "<ulink url='clisp.html#opt-ansi'><option>-ansi</option></ulink>">
+<!ENTITY apropos-do-more "<link linkend='apropos'><varname>CUSTOM:*APROPOS-DO-MORE*</varname></link>">
+<!ENTITY apropos-matcher "<link linkend='apropos'><varname>CUSTOM:*APROPOS-MATCHER*</varname></link>">
 <!ENTITY appease-cerrors "<link linkend='appease-cerrors'><function>EXT:APPEASE-CERRORS</function></link>">
 <!ENTITY browser "<link linkend='browser'><constant>CUSTOM:*BROWSER*</constant></link>">
 <!ENTITY browser-k "<link linkend='browser'><constant>:BROWSER</constant></link>">
@@ -246,6 +248,7 @@
 <!ENTITY rd-integer "<link linkend='bin-input'><function>EXT:READ-INTEGER</function></link>">
 <!ENTITY re-cflags-opts "<link linkend='re-cflags'><constant>:EXTENDED</constant> <constant>:IGNORE-CASE</constant> <constant>:NEWLINE</constant> <constant>:NOSUB</constant></link>">
 <!ENTITY re-eflags-opts "<link linkend='re-eflags'><constant>:NOTBOL</constant> <constant>:NOTEOL</constant></link>">
+<!ENTITY re-matcher "<link linkend='re-matcher'><function>REGEXP:REGEXP-MATCHER</function></link>">
 <!ENTITY re-export "<link linkend='re-export'><function>EXT:RE-EXPORT</function></link>">
 <!ENTITY re-match "<link linkend='re-match'><function>REGEXP:MATCH</function></link>">
 <!ENTITY re-match-end "<link linkend='re-match-end'><function>REGEXP:MATCH-END</function></link>">
